# nicegui-demo

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
.nicegui/: storage-user-97bb4ffe-9c4e-4fc4-9635-c7b2f1b431bb.json
data/: users.db
