[project]
name = "nicegui-demo"
version = "0.1.0"
description = "A nicegui demo app"
authors = [
    {name = "hawm",email = "20796940+hawm@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "nicegui (>=2.12.1,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
